# ufaz-website-v2

./: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
core/: models.py
core/migrations/: 0001_initial.py
core/templatetags/: assets.py
home/templates/home/: home_page.html
jstools/: gulpfile.mjs  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js
static/css/: style.css  style.min.css
website/: urls.py
website/settings/: base.py  dev.py
website/static/css/: base.css  style.css  style.min.css
website/static/css/components/: header.css
website/static/js/: base.js
website/static/js/components/: header.js  navbar.js
website/templates/: base.html
website/templates/includes/: header.html  site-search.html
website/templates/menus/: flat_menu.html  main_menu.html  sub_menu.html
