[tool.poetry]
name = "ufaz-website-v2"
version = "0.1.0"
description = "Version 2 of UFAZ Website"
authors = ["Gadir Rustamli <g.rustamli@ufaz.az>"]
readme = "README.md"
packages = [{include = "ufaz_website_v2"}]

[tool.poetry.dependencies]
python = "^3.11"
wagtail = "^4.1.1"
opencv-python = "^4.6.0.66"
rustface = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
