[tool.poetry]
name = "ufaz-website-v2"
version = "0.1.0"
description = "Version 2 of UFAZ Website"
authors = ["Gadir Rustamli <g.rustamli@ufaz.az>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wagtail = "^4.1.1"
wagtailmenus = "^3.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
